feat: add modal view for issue detail view

--- a/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
+++ b/iOS/issue-tracker/issue-tracker/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztH-lY-X3Y">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ztH-lY-X3Y">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -84,21 +84,21 @@
             </objects>
             <point key="canvasLocation" x="1019" y="793"/>
         </scene>
-        <!--내게정-->
+        <!--Issue Detail View Controller-->
         <scene sceneID="CPO-fU-AJO">
             <objects>
-                <viewController id="cxD-Kl-bEy" sceneMemberID="viewController">
+                <viewController id="cxD-Kl-bEy" customClass="IssueDetailViewController" customModule="issue_tracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="jZc-Mc-yp0">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="QuP-fM-FfB"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="내게정" image="person" catalog="system" id="JZ5-aR-2TP"/>
+                    <navigationItem key="navigationItem" id="lY1-YY-Pza"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vTy-kJ-ZF8" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3072" y="793"/>
+            <point key="canvasLocation" x="3816" y="793"/>
         </scene>
         <!--Milestone View Controller-->
         <scene sceneID="f18-5Z-nm8">
@@ -130,7 +130,7 @@
                         <segue destination="oTI-da-eDR" kind="relationship" relationship="viewControllers" id="Fb5-vw-YJJ"/>
                         <segue destination="dsf-nF-ec5" kind="relationship" relationship="viewControllers" id="U3N-hc-L3l"/>
                         <segue destination="g0q-18-mPP" kind="relationship" relationship="viewControllers" id="DK5-w3-R3k"/>
-                        <segue destination="cxD-Kl-bEy" kind="relationship" relationship="viewControllers" id="HpJ-9s-VRl"/>
+                        <segue destination="U3B-4J-99B" kind="relationship" relationship="viewControllers" id="HpJ-9s-VRl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pyw-Dd-A8x" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -155,6 +155,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f25-i6-ILh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1737.68115942029" y="792.85714285714278"/>
+        </scene>
+        <!--내게정-->
+        <scene sceneID="G9G-oG-tfL">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="U3B-4J-99B" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="내게정" image="person" catalog="system" id="JZ5-aR-2TP"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="IUe-9C-6JR">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="cxD-Kl-bEy" kind="relationship" relationship="rootViewController" id="HHd-LI-cVg"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dTT-ZN-Tjt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3071.0144927536235" y="792.85714285714278"/>
         </scene>
     </scenes>
     <resources>
