[#51] Feat: :sparkles: Network Request 함수 작성 및 VC에 네트워크 관련 모델 배치

--- a/iOS/issueTracker/issueTracker/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/issueTracker/issueTracker/StoryBoard/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Login View Controller-->
         <scene sceneID="WO7-2p-lr9">
             <objects>
-                <viewController id="Lyf-Ut-OWF" customClass="ViewController" customModule="issueTracker" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Lyf-Ut-OWF" customClass="LoginViewController" customModule="issueTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Xnh-oy-yGE">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -57,7 +57,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Uf-VA-9hk" userLabel="비밀번호">
-                                        <rect key="frame" x="16" y="66" width="59" height="21"/>
+                                        <rect key="frame" x="16" y="77.5" width="59" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
