--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,6 +9,10 @@ a {
   text-decoration: none;
 }
 
+:root {
+  --TitleFontSize: 4.2rem;
+}
+
 /* ====== Custom CSS - Dico, ppamppam ====== */
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
@@ -21,7 +25,7 @@ a {
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
 
- html {
+html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
 }
@@ -187,7 +191,8 @@ textarea {
  */
 
 button,
-input { /* 1 */
+input {
+  /* 1 */
   overflow: visible;
 }
 
@@ -197,7 +202,8 @@ input { /* 1 */
  */
 
 button,
-select { /* 1 */
+select {
+  /* 1 */
   text-transform: none;
 }
 
