[#9] Feat: :sparkles: 백엔드에서 JWT 받아오기

--- a/iOS/issueTracker/issueTracker/StoryBoard/Base.lproj/Main.storyboard
+++ b/iOS/issueTracker/issueTracker/StoryBoard/Base.lproj/Main.storyboard
@@ -57,7 +57,7 @@
                                         </constraints>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Uf-VA-9hk" userLabel="비밀번호">
-                                        <rect key="frame" x="16" y="77.5" width="59" height="21"/>
+                                        <rect key="frame" x="16" y="66" width="59" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -129,6 +129,9 @@
                                         <integer key="value" value="10"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="didTapGitHubLogin:" destination="Lyf-Ut-OWF" eventType="touchUpInside" id="PSY-Ur-juh"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="5EO-O9-JgW"/>
